Fixed jumping issue when scrolling

--- a/src/Home/Timeline/timeline.module.css
+++ b/src/Home/Timeline/timeline.module.css
@@ -12,3 +12,7 @@
     font-weight: normal !important;
     margin-bottom: -1rem !important;
 }
+
+html, body {
+    overflow-x:hidden
+}
